--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-retry": "^3.1.1",
     "factom": "^0.3.6",
     "json2csv": "^4.3.1",
     "lodash": "^4.17.11",
