--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "address-rewrite",
+  "name": "factoid-address-monitord",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,8 +13,10 @@
     "axios": "^0.18.0",
     "axios-retry": "^3.1.1",
     "factom": "^0.3.6",
+    "joi": "^14.3.0",
     "json2csv": "^4.3.1",
     "lodash": "^4.17.11",
+    "make-error-cause": "^2.2.0",
     "moment": "^2.22.2"
   }
 }
