--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json2csv": "^4.3.1",
     "lodash": "^4.17.11",
     "make-error-cause": "^2.2.0",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "winston": "^3.1.0"
   }
 }
