--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/logging-winston": "^0.10.2",
     "axios": "^0.18.0",
     "axios-retry": "^3.1.1",
     "factom": "^0.3.6",
@@ -18,6 +19,7 @@
     "lodash": "^4.17.11",
     "make-error-cause": "^2.2.0",
     "moment": "^2.22.2",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "winston-papertrail": "^1.0.5"
   }
 }
