--- a/package.json
+++ b/package.json
@@ -1,27 +1,13 @@
 {
     "name": "factoid-address-monitord",
     "version": "3.0.0",
-    "description": "Accounting tool for factoid addresses",
+    "description": "Accounting tool for factoid addresses.",
     "main": "index.js",
     "scripts": {
-        "test": "nyc mocha -r ts-node/register test/**/*.spec.ts"
-    },
-    "nyc": {
-        "include": [
-            "src/**/*.ts"
-        ],
-        "extension": [
-            ".ts"
-        ],
-        "exclude": [
-            "**/*.d.ts"
-        ],
-        "reporter": [
-            "html",
-            "text"
-        ],
-        "all": true,
-        "sourceMap": true
+        "test": "jest",
+        "build": "tsc",
+        "start": "node src",
+        "docker-build": "docker build -t factoshi/factoid-accounts:develop ."
     },
     "repository": {
         "type": "git",
@@ -40,19 +26,21 @@
     },
     "homepage": "https://github.com/Factoshi/factoid-address-monitord#readme",
     "dependencies": {
-        "@types/node": "^12.0.8",
-        "@types/sqlite3": "^3.1.5",
-        "factom": "^1.2.3",
-        "sqlite3": "^4.0.9"
+        "@hapi/joi": "^15.1.0",
+        "@types/hapi__joi": "^15.0.2",
+        "@types/js-yaml": "^3.12.1",
+        "@types/node": "^12.0.10",
+        "axios": "^0.19.0",
+        "axios-retry": "^3.1.2",
+        "bottleneck": "^2.19.1",
+        "factom": "github:factoshi/factomjs",
+        "joi-factom": "^1.1.2",
+        "js-yaml": "^3.13.1",
+        "typescript": "^3.5.1"
     },
     "devDependencies": {
-        "@types/chai": "^4.1.7",
-        "@types/mocha": "^5.2.7",
-        "chai": "^4.2.0",
-        "mocha": "^6.1.4",
-        "nyc": "^14.1.1",
-        "source-map-support": "^0.5.12",
-        "ts-node": "^8.2.0",
-        "typescript": "^3.5.1"
+        "@types/jest": "^24.0.15",
+        "jest": "^24.8.0",
+        "ts-jest": "^24.0.2"
     }
 }
