--- a/config/config.EXAMPLE.yaml
+++ b/config/config.EXAMPLE.yaml
@@ -1,11 +1,11 @@
-# Defaults to OpenNode. 
+# Defaults to OpenNode.
 factomd:
     host: api.factomd.net
     port: 443
     path: /v2
     protocol: https
-    # user: 'alice', # RPC basic authentication
-    # password: 'pwd',
+    # user: alice
+    # password: pwd
 
 # Get your cryptocompare API credentials at https://min-api.cryptocompare.com/
 cryptocompare:
@@ -17,22 +17,22 @@ bitcoinTax:
     key: d060a8eabe299f30
     secret: 49bbab12646601b43406fce63f12470d
 
-# Monitor as many addresses as you like using the format below. 
+# Monitor as many addresses as you like using the format below.
 addresses:
     - address: FA3cKmuSbVDgfwEnTh3UBnAdqMEz5hcMcqGDpjgW12BCu5zGPJLN
       currency: GBP
       recordCoinbase: true
       recordNonCoinbase: false
 
-    - address: FA3nzKANkxznFh6jTwcQ7YvuZqRdqxfEvKispXLhkRxCEZmr9F8H
-      currency: EUR
-      recordCoinbase: true
-      recordNonCoinbase: false
-
-    - address: FA2MkefUkQLt3yuWgPBYP4acwGVZgAanqK8p4hkDgXv6VkMfJR9W
-      currency: USD
-      recordCoinbase: false
-      recordNonCoinbase: true
+    # - address: FA3nzKANkxznFh6jTwcQ7YvuZqRdqxfEvKispXLhkRxCEZmr9F8H
+    #   currency: EUR
+    #   recordCoinbase: true
+    #   recordNonCoinbase: false
+    #
+    # - address: FA2MkefUkQLt3yuWgPBYP4acwGVZgAanqK8p4hkDgXv6VkMfJR9W
+    #   currency: USD
+    #   recordCoinbase: false
+    #   recordNonCoinbase: true
 
 options:
     # Height from which you would like to begin looking for factoid receipts for the first scan.
