--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "factoidd",
-    "version": "3.0.1",
+    "version": "3.1.0",
     "description": "Fatoidd tracks factoid receipts in a fiat currency of your choice.",
     "main": "build/index.js",
     "scripts": {
         "test": "jest",
         "build": "tsc",
-        "start": "node factoidd",
+        "start:develop": "ENV_FILE=develop ts-node bin/main.ts",
+        "start:prod": "ENV_FILE=production node build/bin/main.js",
         "docker-build": "docker build -t factoshi/factoidd:develop .",
         "docker-push": "docker push factoshi/factoidd:develop",
         "docker-deploy": "docker build -t factoshi/factoidd:develop . && docker push factoshi/factoidd:develop"
@@ -28,21 +29,28 @@
     },
     "homepage": "https://github.com/Factoshi/factoidd#readme",
     "dependencies": {
-        "@hapi/joi": "^15.1.0",
-        "@types/hapi__joi": "^15.0.2",
-        "@types/js-yaml": "^3.12.1",
-        "@types/node": "^12.0.10",
-        "axios": "^0.19.0",
+        "@hapi/joi": "^15.1.1",
+        "@types/hapi__joi": "^15.0.4",
+        "@types/js-yaml": "^3.12.3",
+        "@types/node": "^12.12.34",
+        "@types/sqlite3": "^3.1.6",
+        "axios": "^0.19.2",
         "axios-retry": "^3.1.2",
-        "bottleneck": "^2.19.1",
+        "bottleneck": "^2.19.5",
+        "commander": "^5.0.0",
+        "dotenv": "^8.2.0",
         "factom": "github:factoshi/factomjs",
         "joi-factom": "^1.1.2",
         "js-yaml": "^3.13.1",
-        "typescript": "^3.5.1"
+        "sqlite": "^4.0.0-beta.7",
+        "sqlite3": "^4.1.1",
+        "typescript": "^3.8.3",
+        "winston": "^3.2.1"
     },
     "devDependencies": {
-        "@types/jest": "^24.0.15",
-        "jest": "^24.8.0",
-        "ts-jest": "^24.0.2"
+        "@types/jest": "^24.9.1",
+        "jest": "^24.9.0",
+        "ts-jest": "^24.3.0",
+        "ts-node": "^8.8.2"
     }
 }
