--- a/package.json
+++ b/package.json
@@ -29,28 +29,30 @@
     },
     "homepage": "https://github.com/Factoshi/factoidd#readme",
     "dependencies": {
-        "@hapi/joi": "^15.1.1",
-        "@types/hapi__joi": "^15.0.4",
-        "@types/js-yaml": "^3.12.3",
-        "@types/node": "^12.12.34",
-        "@types/sqlite3": "^3.1.6",
         "axios": "^0.19.2",
         "axios-retry": "^3.1.2",
         "bottleneck": "^2.19.5",
         "commander": "^5.0.0",
         "dotenv": "^8.2.0",
         "factom": "github:factoshi/factomjs",
+        "inquirer": "^7.1.0",
         "joi-factom": "^1.1.2",
         "js-yaml": "^3.13.1",
-        "sqlite": "^4.0.0-beta.7",
+        "sqlite": "^4.0.5",
         "sqlite3": "^4.1.1",
-        "typescript": "^3.8.3",
         "winston": "^3.2.1"
     },
     "devDependencies": {
+        "@hapi/joi": "^15.1.1",
+        "@types/hapi__joi": "^15.0.4",
+        "@types/inquirer": "^6.5.0",
+        "@types/js-yaml": "^3.12.3",
+        "@types/node": "^12.12.34",
+        "@types/sqlite3": "^3.1.6",
         "@types/jest": "^24.9.1",
         "jest": "^24.9.0",
         "ts-jest": "^24.3.0",
-        "ts-node": "^8.8.2"
+        "ts-node": "^8.8.2",
+        "typescript": "^3.8.3"
     }
 }
