--- a/package.json
+++ b/package.json
@@ -50,16 +50,24 @@
         "winston": "^3.2.1"
     },
     "devDependencies": {
+        "@commitlint/cli": "^8.3.5",
+        "@commitlint/config-conventional": "^8.3.4",
         "@hapi/joi": "^15.1.1",
         "@types/hapi__joi": "^15.0.4",
         "@types/inquirer": "^6.5.0",
+        "@types/jest": "^24.9.1",
         "@types/js-yaml": "^3.12.3",
         "@types/node": "^12.12.34",
         "@types/sqlite3": "^3.1.6",
-        "@types/jest": "^24.9.1",
+        "husky": "^4.2.3",
         "jest": "^24.9.0",
         "ts-jest": "^24.3.0",
         "ts-node": "^8.8.2",
         "typescript": "^3.8.3"
+    },
+    "husky": {
+        "hooks": {
+            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+        }
     }
 }
