--- a/package.json
+++ b/package.json
@@ -53,14 +53,18 @@
         "@commitlint/cli": "^8.3.5",
         "@commitlint/config-conventional": "^8.3.4",
         "@hapi/joi": "^15.1.1",
+        "@types/chai": "^4.2.11",
         "@types/hapi__joi": "^15.0.4",
         "@types/inquirer": "^6.5.0",
-        "@types/jest": "^24.9.1",
         "@types/js-yaml": "^3.12.3",
+        "@types/mocha": "^7.0.2",
         "@types/node": "^12.12.34",
+        "@types/sinon": "^9.0.0",
         "@types/sqlite3": "^3.1.6",
+        "chai": "^4.2.0",
         "husky": "^4.2.3",
-        "jest": "^24.9.0",
+        "mocha": "^7.1.1",
+        "sinon": "^9.0.1",
         "ts-jest": "^24.3.0",
         "ts-node": "^8.8.2",
         "typescript": "^3.8.3"
