--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,4 +28,8 @@ jobs:
             - run: npm test
               env:
                   CI: true
-                  loglvl: debug
+                  LOG_LEVEL: debug
+                  FACTOM_HOST: api.factomd.net
+                  FACTOM_PORT: 443
+                  FACTOM_PATH: '/v2'
+                  FACTOM_PROTOCOl: 'https'
