--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     },
     "homepage": "https://github.com/Factoshi/factoidd#readme",
     "dependencies": {
+        "@hapi/joi": "^17.1.1",
+        "@types/hapi__joi": "^16.0.12",
+        "@types/inquirer": "^6.5.0",
+        "@types/js-yaml": "^3.12.3",
+        "@types/node": "^13.11.1",
+        "@types/sqlite3": "^3.1.6",
         "axios": "^0.19.2",
         "axios-retry": "^3.1.2",
         "bottleneck": "^2.19.5",
@@ -39,28 +45,21 @@
         "js-yaml": "^3.13.1",
         "sqlite": "^4.0.7",
         "sqlite3": "^4.1.1",
+        "typescript": "^3.8.3",
         "winston": "^3.2.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^8.3.5",
         "@commitlint/config-conventional": "^8.3.4",
-        "@hapi/joi": "^15.1.1",
         "@types/chai": "^4.2.11",
-        "@types/hapi__joi": "^15.0.4",
-        "@types/inquirer": "^6.5.0",
-        "@types/js-yaml": "^3.12.3",
         "@types/mocha": "^7.0.2",
-        "@types/node": "^12.12.35",
         "@types/sinon": "^9.0.0",
-        "@types/sqlite3": "^3.1.6",
         "chai": "^4.2.0",
         "husky": "^4.2.5",
         "mocha": "^7.1.1",
         "nodemon": "^2.0.3",
         "sinon": "^9.0.2",
-        "ts-jest": "^24.3.0",
-        "ts-node": "^8.8.2",
-        "typescript": "^3.8.3"
+        "ts-node": "^8.8.2"
     },
     "husky": {
         "hooks": {
