--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "scripts": {
         "build": "tsc",
         "test": "ENV_FILE=test mocha -r ts-node/register -r env  **/*.spec.ts",
-        "test:watch": "nodemon --config \"./util/nodemon.test.json\"",
-        "docker-build": "docker build -t factoshi/factoidd:develop .",
-        "docker-push": "docker push factoshi/factoidd:develop",
-        "docker-deploy": "docker build -t factoshi/factoidd:develop . && docker push factoshi/factoidd:develop"
+        "test:watch": "nodemon --config \"./util/nodemon.test.json\""
     },
     "repository": {
         "type": "git",
