--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "scripts": {
         "build": "tsc",
         "test": "ENV_FILE=test mocha -r ts-node/register -r env  **/*.spec.ts",
-        "test:watch": "nodemon --config \"./util/nodemon.test.json\""
+        "test:watch": "nodemon --config \"./util/nodemon.test.json\"",
+        "docker-build": "docker build -t factoshi/factoidd:develop .",
+        "docker-push": "docker push factoshi/factoidd:develop",
+        "docker-deploy": "docker build -t factoshi/factoidd:develop . && docker push factoshi/factoidd:develop"
     },
     "repository": {
         "type": "git",
@@ -29,14 +32,14 @@
         "@types/hapi__joi": "^16.0.12",
         "@types/inquirer": "^6.5.0",
         "@types/js-yaml": "^3.12.3",
-        "@types/node": "^13.11.1",
+        "@types/node": "^13.13.0",
         "@types/sqlite3": "^3.1.6",
         "axios": "^0.19.2",
         "axios-retry": "^3.1.2",
         "bottleneck": "^2.19.5",
         "commander": "^5.0.0",
         "dotenv": "^8.2.0",
-        "factom": "github:factoshi/factomjs",
+        "factom": "^1.3.0",
         "inquirer": "^7.1.0",
         "joi-factom": "^1.1.2",
         "js-yaml": "^3.13.1",
