--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
     "name": "factoidd",
-    "version": "4.0.2",
+    "version": "5.0.0-beta",
     "description": "Fatoidd tracks factoid receipts in a fiat currency of your choice.",
     "main": "build/index.js",
     "scripts": {
         "build": "tsc",
-        "test": "ENV_FILE=test mocha -r ts-node/register -r env  **/*.spec.ts",
-        "test:watch": "nodemon --config \"./util/nodemon.test.json\"",
         "docker-build": "docker build -t factoshi/factoidd:develop .",
         "docker-push": "docker push factoshi/factoidd:develop",
         "docker-deploy": "docker build -t factoshi/factoidd:develop . && docker push factoshi/factoidd:develop"
@@ -31,35 +29,34 @@
         "@hapi/joi": "^17.1.1",
         "@types/hapi__joi": "^16.0.12",
         "@types/inquirer": "^6.5.0",
-        "@types/js-yaml": "^3.12.3",
-        "@types/node": "^13.13.0",
-        "@types/sqlite3": "^3.1.6",
+        "@types/js-yaml": "^3.12.7",
+        "@types/node": "^13.13.52",
+        "@types/sqlite3": "^3.1.7",
         "axios": "^0.21.1",
-        "axios-retry": "^3.1.2",
+        "axios-retry": "^3.1.9",
         "bottleneck": "^2.19.5",
-        "commander": "^5.0.0",
-        "dotenv": "^8.2.0",
-        "factom": "^1.3.0",
-        "inquirer": "^7.1.0",
+        "commander": "^5.1.0",
+        "dotenv": "^8.6.0",
+        "factom": "^1.4.2",
         "joi-factom": "^1.1.2",
-        "js-yaml": "^3.13.1",
-        "sqlite": "^4.0.7",
-        "sqlite3": "^4.1.1",
-        "typescript": "^3.8.3",
-        "winston": "^3.2.1"
+        "js-yaml": "^3.14.1",
+        "sqlite": "^4.0.23",
+        "sqlite3": "^4.2.0",
+        "typescript": "^3.9.10",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
-        "@commitlint/cli": "^8.3.5",
-        "@commitlint/config-conventional": "^8.3.4",
-        "@types/chai": "^4.2.11",
+        "@commitlint/cli": "^12.1.4",
+        "@commitlint/config-conventional": "^12.1.4",
+        "@types/chai": "^4.2.21",
         "@types/mocha": "^7.0.2",
-        "@types/sinon": "^9.0.0",
-        "chai": "^4.2.0",
-        "husky": "^4.2.5",
-        "mocha": "^7.1.1",
-        "nodemon": "^2.0.3",
-        "sinon": "^9.0.2",
-        "ts-node": "^8.8.2"
+        "@types/sinon": "^9.0.11",
+        "chai": "^4.3.4",
+        "husky": "^4.3.8",
+        "mocha": "^7.2.0",
+        "nodemon": "^2.0.12",
+        "sinon": "^9.2.4",
+        "ts-node": "^8.10.2"
     },
     "husky": {
         "hooks": {
