--- a/package.json
+++ b/package.json
@@ -27,35 +27,23 @@
     "homepage": "https://github.com/Factoshi/factoidd#readme",
     "dependencies": {
         "@hapi/joi": "^17.1.1",
-        "@types/hapi__joi": "^16.0.12",
-        "@types/inquirer": "^6.5.0",
-        "@types/js-yaml": "^3.12.7",
-        "@types/node": "^13.13.52",
-        "@types/sqlite3": "^3.1.7",
         "axios": "^0.21.1",
         "axios-retry": "^3.1.9",
         "bottleneck": "^2.19.5",
         "dotenv": "^10.0.0",
         "factom": "^1.4.2",
         "joi-factom": "^1.1.2",
-        "js-yaml": "^3.14.1",
-        "sqlite": "^4.0.23",
-        "sqlite3": "^5.0.2",
-        "typescript": "^3.9.10",
+        "js-yaml": "^4.1.0",
         "winston": "^3.3.3"
     },
     "devDependencies": {
         "@commitlint/cli": "^12.1.4",
         "@commitlint/config-conventional": "^12.1.4",
-        "@types/chai": "^4.2.21",
-        "@types/mocha": "^7.0.2",
-        "@types/sinon": "^9.0.11",
-        "chai": "^4.3.4",
+        "@types/hapi__joi": "^17.1.7",
+        "@types/js-yaml": "^4.0.2",
+        "@types/node": "^13.13.52",
         "husky": "^4.3.8",
-        "mocha": "^7.2.0",
-        "nodemon": "^2.0.12",
-        "sinon": "^9.2.4",
-        "ts-node": "^8.10.2"
+        "typescript": "^3.9.10"
     },
     "husky": {
         "hooks": {
