--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "factoidd",
-    "version": "5.0.0-beta",
+    "version": "5.0.0",
     "description": "Fatoidd tracks factoid receipts in a fiat currency of your choice.",
     "main": "build/index.js",
     "scripts": {
